fix: fixed focus visibility for sharing page

--- a/src/theme/bootstrap-override/bootstrap-italia/_focus.scss
+++ b/src/theme/bootstrap-override/bootstrap-italia/_focus.scss
@@ -1,4 +1,11 @@
-:focus:not(.focus--mouse),
+// Universal focus mixin
+@mixin universal-focus-style() {
+  outline: $outer-focus-outline auto 2px !important;
+  outline-offset: 2px;
+  box-shadow: 0 0 0 2px $inner-focus-shadow !important;
+}
+
+:focus-visible,
 %focus {
   outline: 2px solid $outer-focus-outline !important;
   outline-offset: 2px;
@@ -7,20 +14,28 @@
   box-shadow: 0 0 0 2px $inner-focus-shadow !important;
 }
 
-input:focus:not(.focus--mouse) {
-  // only add border to input besides default double outline
+input:focus-visible {
   border: 2px solid $outer-focus-outline !important;
 }
 
-.skiplinks a:focus:not(.focus--mouse) {
+.skiplinks a:focus-visible {
   border: 2px solid;
 }
 
-.gdpr-privacy-show-banner:focus:not(.focus--mouse) {
-  // invert general :focus rule since button is always white
+.gdpr-privacy-show-banner:focus-visible {
   outline: 2px solid $inner-focus-shadow !important;
   outline-offset: 2px;
 
   border: none !important;
   box-shadow: 0 0 0 2px $outer-focus-outline !important;
+}
+
+// Semantic UI checkbox focus styles
+.ui.checkbox input:focus-visible ~ label::before {
+  @include universal-focus-style();
+  outline-offset: 4px;
+}
+
+.ui.checkbox label::before {
+  transition: none !important;
 }
